demo_web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: busybox-web
  namespace: dedepos-uat
spec:
  ingressClassName: nginx
  rules:
  - host: marinepro-uat.dohome.co.th
    http:
      paths:
      - backend:
          service:
            name: busybox-web
            port:
              number: 8080
        path: /
        pathType: Prefix
